Updated create artwrok modal feature

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,8 @@ div.links a { color: #58595b; text-decoration: none; border-bottom: 2px solid #b
 /* div.links a:hover { color:  #e76a58; } */
 div.links a:hover { color:  #b8dd9b; }
 
+h4 { display:  inline-block; }
+
 /* -- DIVS -- */
 .bg-green { background-color: #b8dd9b; }
 
