--- a/templates/_artistlist.html
+++ b/templates/_artistlist.html
@@ -1,6 +1,7 @@
-<li class="li_artist">Artist <input type="text" id="" name="art_artist" class="" list="artists"><datalist id="artists">
-		{% for artist in artists %}
-		<option data-value="{{ artist.id }}" value="{% if artist.fName %}{{ artist.fName }} {% endif %}{{ artist.pName }}"></option>
-		{% endfor %}
+<li class="li_artist">Artist <input type="text" name="art_artist" list="artists">
+		<datalist id="artists">
+			{% for artist in artists %}
+			<option data-value="{{ artist.id }}" value="{% if artist.fName %}{{ artist.fName }} {% endif %}{{ artist.pName }}"></option>
+			{% endfor %}
 		</datalist>
 </li>
