--- a/templates/create.html
+++ b/templates/create.html
@@ -1,4 +1,6 @@
 {% from "_macros.html" import nav %}
+{% from "_macros.html" import liArt with context %}
+{% from "_artworklist.html" import liExh with context %}
 <html>
 <head>
 	<meta charset="utf-8">
@@ -47,9 +49,9 @@
 					<li><label>Exhibition Dates</label> <input type='date' name='exh_startDate'> to <input type='date' name='exh_endDate'></li>
 				</ul>
 				<h3>Organizations</h3>
-				<button type='button' class='orgCreate btn-reg' data-toggle="modal" data-target="#modal_orgCreate">Create</button> <button id='orgAdd' type='button' class='btn-edit org_add'>+</button>
+				<button type='button' id="createModal_org" class='org_create btn-reg' data-toggle="modal" data-target="#modal_org">Create</button> <button id='add_org' type='button' class='btn-edit org_add'>+</button>
 				<ul class="ul_org">
-					<li>
+					<li class="li_org">
 						<select id='' name='exh_org' class=''>
 							<option value='' disabled selected>Organization</option>
 							{% for org in orgs %}
@@ -61,22 +63,9 @@
 			</div>
 			<div class='exh_artworks'>
 				<h3>Artworks</h3>
-					<button type='button' class='artCreate btn-reg' data-toggle="modal" data-target="#modal_artCreate">Create</button> <button id='artAdd' type='button' class='btn-edit art_add'>+</button>
+					<button type='button' id="createModal_art" class='art_create btn-reg' data-toggle="modal" data-target="#modal_art">Create</button> <button id='add_exh' type='button' class='btn-edit art_add'>+</button>
 					<ul id='exh_art_list'>
-						<li>
-							<select id='' name='exh_art' class=''>
-								<option value='' disabled selected>Artwork</option>
-								{% for artwork in artworks %}
-								<option value="{{ artwork.id }}">{{ artwork.name }}</option>
-								{% endfor %}
-							</select> @ 
-							<select id='' name='exh_park' class=''>
-								<option value='' disabled selected>Park</option>
-								{% for park in parks %}
-								<option value="{{ park.id }}">{{ park.name }}</option>
-								{% endfor %}
-							</select> 
-						</li>
+						{{ liExh(artworks, parks)}}
 					</ul>
 
 			</div>
@@ -98,28 +87,14 @@
 			<div class="art_bio">
 				<h3>Bio</h3>
 				<ul>
-					<li>Name <input type="text" name="artwork_name"> 
-						<!-- <input type='text' id='' name='art_park' class='' list='parks'>
-							<datalist id='parks'>
-								<option value='' disabled selected>Park</option>
-								{% for park in parks %}
-								<option data-value="{{ park.id }}" value="{{ park.name }}"></option>
-								{% endfor %}
-							</datalist> -->
-					</li>
+					<li>Name <input type="text" name="artwork_name"></li>
 				</ul>
 			</div>
 			<div class="art_artists">
 				<h3>Artists</h3>
-				<button type="button" class="artistCreate btn-reg" data-toggle="modal" data-target="#modal_artistCreate">Create</button> <button id="artistAdd" type="button" class="artist_add btn-edit">+</button>
+				<button type="button" id="createModal_artist" class="artist_create btn-reg" data-toggle="modal" data-target="#modal_artist">Create</button> <button id="add_artist" type="button" class="artist_add btn-edit">+</button>
 				<ul class="ul_artist">
-					<li>Artist <input type="text" id="try_it" name="art_artist" class="try_it" list="artists">
-							<datalist id="artists">
-								{% for artist in artists %}
-								<option data-value="{{ artist.id }}" value="{% if artist.fName %}{{ artist.fName }} {% endif %}{{ artist.pName }}"></option>
-								{% endfor %}
-							</datalist>
-					</li>
+					{{ liArt(artists)}}
 				</ul>
 			</div>
 		</div>
@@ -166,11 +141,11 @@
 
 
 	<!-- Create artwork modal -->
-	<div id="modal_artCreate" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div id="modal_art" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	  <div class="modal-dialog" role="document">
 	    <div class="modal-content">
 	      <div class="modal-header bg-green">
-	        <h5 class="modal-title" id="exampleModalLabel">CREATE AN ARTWORK</h5>
+	        <h5 class="modal-title" id="">CREATE AN ARTWORK</h5>
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	          <span aria-hidden="true">&times;</span>
 	        </button>
@@ -180,46 +155,39 @@
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn-no" data-dismiss="modal">Cancel</button>
-	        <button type="button" id="modal_add_artwork" class="btn-add">Add</button>
+	        <button type="button" id="post_art" class="btn-add post_data">Add</button>
 	      </div>
 	    </div>
 	  </div>
 	</div>
 
 	<!-- Create artist modal -->
-	<div id="modal_artistCreate" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div id="modal_artist" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	  <div class="modal-dialog" role="document">
 	    <div class="modal-content">
 	      <div class="modal-header bg-green">
-	        <h5 class="modal-title" id="exampleModalLabel">CREATE AN ARTIST</h5>
+	        <h5 class="modal-title" id="">CREATE AN ARTIST</h5>
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	          <span aria-hidden="true">&times;</span>
 	        </button>
 	      </div>
 	      <div class="modal-body">
-<!-- 	      	<form id='form_artist'>
-				<ul>
-					<li>Name <input type='text' name='artist_pName' placeholder='primary/last name'> <input type='text' name='artist_fName' placeholder='first name'></li>
-					<li>Email <input type='text' name='artist_email'></li>
-					<li>Phone <input type='text' name='artist_phone'></li>
-					<li>Website  <input type='text' name='artist_website'></li>
-				</ul>
-			</form> -->
+
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn-no" data-dismiss="modal">Cancel</button>
-	        <button type="button" id="modal_add_artist" class="btn-add">Add</button>
+	        <button type="button" id="post_artist" class="btn-add post_data">Add</button>
 	      </div>
 	    </div>
 	  </div>
 	</div>
 
 	<!-- Create org modal -->
-	<div id="modal_orgCreate" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div id="modal_org" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	  <div class="modal-dialog" role="document">
 	    <div class="modal-content">
 	      <div class="modal-header bg-green">
-	        <h5 class="modal-title" id="exampleModalLabel">CREATE AN ORGANIZATION</h5>
+	        <h5 class="modal-title" id="">CREATE AN ORGANIZATION</h5>
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	          <span aria-hidden="true">&times;</span>
 	        </button>
@@ -229,7 +197,7 @@
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn-no" data-dismiss="modal">Cancel</button>
-	        <button type="button" id='modal_add_org' class="btn-add">Add</button>
+	        <button type="button" id="post_org" class="btn-add post_data">Add</button>
 	      </div>
 	    </div>
 	  </div>
