Cleared ul append when 2 modals are visible

--- a/templates/create.html
+++ b/templates/create.html
@@ -57,7 +57,7 @@
 				<h3>Artworks</h3>
 					<button type="button" id="createModal_art" class="art_create btn-reg" data-toggle="modal" data-target="#modal_art">Create</button> <button id="add_art" type="button" class="btn-edit art_add">+</button>
 					<ul class="ul_art">
-					{% include "include/exh_list.html" ignore missing with context %}
+					{% include "include/art_list.html" ignore missing with context %}
 					</ul>
 
 			</div>
